@@ -14,6 +14,7 @@ Bugs fixed in 3.16.2
 been displayed when accessing the recent entries via the system tray icon.
 [2664703] Load base locale DLL if can't find a specific sub-locale version
 [2657132] View Reports no longer causes application crash.
+[] Correct DragBar bitmaps for a New database.
 
 Changes to Existing Features in 3.16.2
 =======================================
